--- a/pages/home.html
+++ b/pages/home.html
@@ -13,7 +13,7 @@
       <img class="rounded float-start m-1" src="/images/RICK_MORTY_ICON-01.svg">
     </div>
     <div class="container mt-4 ">
-      <h1 class="text-center titulo">API de Rick and Morty</h1>
+      <h1 class="text-center titulo fw-bold">API de Rick and Morty</h1>
       <div class="input-group mb-3 col-12 ">
         <input type="text" class="form-control mb-3 inputBusca" placeholder="Pesquise" aria-label="Pesquisar personagens" id="campo-pesquisa">
         <div class="input-group-append">
