alterado o arquivo js para funcionar os modais com informaçoes adicionais

--- a/pages/home.html
+++ b/pages/home.html
@@ -13,7 +13,7 @@
       <img class="rounded float-start m-1" src="/images/RICK_MORTY_ICON-01.svg">
     </div>
     <div class="container mt-4 ">
-      <h1 class="text-center titulo fw-bold">API de Rick and Morty</h1>
+      <h1 class="text-center titulo fw-bold ">API de Rick and Morty</h1>
       <div class="input-group mb-3 col-12 ">
         <input type="text" class="form-control mb-3 inputBusca" placeholder="Pesquise" aria-label="Pesquisar personagens" id="campo-pesquisa">
         <div class="input-group-append">
@@ -27,10 +27,10 @@
     </div>
   </header>
   <main class="fundoMain">
-    <div class="stars"></div>
-    <div class="container full-height">
-      <div class="row teste" id="lista-personagens">
-        <!-- Conteúdo da lista de personagens -->
+    <div class="logoAnimado"></div>
+    <div class="container ">
+      <div class="row ajusteModelo" id="lista-personagens">
+      
       </div>
       <nav>
         <ul class="pagination">
@@ -75,8 +75,9 @@
     </div>
     
   </footer>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="/javascript/home.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
