--- a/pages/home.html
+++ b/pages/home.html
@@ -28,12 +28,12 @@
   </header>
   <main class="fundoMain">
     <div class="logoAnimado"></div>
-    <div class="container ">
+    <div class="container surge">
       <div class="row ajusteModelo" id="lista-personagens">
       
       </div>
-      <nav>
-        <ul class="pagination">
+      <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center mb-0">
           <li class="page-item" id="pagina-anterior">
             <a class="page-link" href="#" aria-label="Página anterior">
               <span aria-hidden="true">&laquo;</span>
@@ -78,6 +78,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="/javascript/home.js"></script>
 </body>
 </html>
